# OpenGL

./: README.md  settings.gradle.kts
camera/: build.gradle.kts
camera/src/main/: AndroidManifest.xml
camera/src/main/res/layout/: activity_main.xml  fragment_camera1.xml  fragment_camera2.xml  fragment_camerax.xml
camera/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opengl/: build.gradle.kts
opengl/src/main/: AndroidManifest.xml
opengl/src/main/assets/camera/: fShader.frag
opengl/src/main/assets/filter/: shader_base_f.glsl
opengl/src/main/assets/style/: shader_base_f.glsl  shader_base_v.glsl
opengl/src/main/assets/texture/: fShader.frag  vShader.vert
opengl/src/main/assets/triangle/: fShader.frag
opengl/src/main/cpp/: CMakeLists.txt  CameraRender.cpp  Preview.cpp  Preview.h  SurfaceRender.cpp  Texture.cpp  Texture.h  TextureRender.cpp  Triangle.cpp  Triangle.h
opengl/src/main/cpp/util/: AAssetUtil.cpp  AAssetUtil.h  GLUtil.cpp  GLUtil.h  LogUtil.h
opengl/src/main/res/layout/: fragment_basic.xml  fragment_camera.xml  fragment_opengl.xml
opengl/src/main/res/values/: strings.xml
opengl2/: build.gradle.kts
opengl2/src/main/cpp/: CCGLCommonDef.h  CCGLTexture.cpp  CCGLTexture.h  CCImage.cpp  CCImage.h  CCNDKGLESRender.cpp  CCNDKGLESRender.h  CCNDKLogDef.h  CCOpenGLRender.cpp  CCOpenGLRender1.cpp  CCOpenGLRender2.cpp  CCOpenGLRender3.cpp  CCOpenGLRender4.cpp  CCOpenGLRender5.cpp  CCOpenGLRender6.cpp  CMakeLists.txt
opengl2/src/main/cpp/util/: CCGLUtil.cpp  CCGLUtil.h
(+43 files in other folders)
